[project]
name = "pdf-summarizer-agentic-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faiss-cpu>=1.13.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "langgraph-cli[inmem]>=0.4.11",
    "setuptools>=80.9.0",
    "streamlit>=1.52.2",
    "unstructured>=0.18.21",
]
